# solocoder-py

./: README.md  _debug_test.py  _test_adam.py  geometry_verification.py  pyproject.toml  test_bug.py  test_clip.py
.cursor/rules/: rule.mdc  task.mdc
tasks/: feature.md
tasks/task001/: assessment-1.txt  assessment-2.txt  prompt-1.txt  prompt-2.txt  session-cot-1.md  session-cot-2.md
tasks/task002/: assessment-1.txt  assessment-2.txt  assessment-3.txt  prompt-1.txt  prompt-2.txt  prompt-3.txt  session-cot-1.md  session-cot-2.md  session-cot-3.md
tasks/task003/: assessment-1.txt  assessment-2.txt  prompt-1.txt  prompt-2.txt  session-cot-1.md  session-cot-2.md
tasks/task004/: assessment-1.txt  assessment-2.txt  assessment-3.txt  assessment-4.txt  prompt-1.txt  prompt-2.txt  prompt-3.txt  prompt-4.txt  session-cot-1.md  session-cot-2.md  session-cot-3.md  session-cot-4.md
tasks/task005/: assessment-1.txt  assessment-2.txt  assessment-3.txt  prompt-1.txt  prompt-2.txt  prompt-3.txt  session-cot-1.md  session-cot-2.md  session-cot-3.md
tasks/task006/: assessment-1.txt  assessment-2.txt  assessment-3.txt  prompt-1.txt  prompt-2.txt  prompt-3.txt  session-cot-1.md  session-cot-2.md  session-cot-3.md
tasks/task007/: assessment-1.txt  assessment-2.txt  prompt-1.txt  prompt-2.txt  session-cot-1.md  session-cot-2.md
tasks/task008/: assessment-1.txt  assessment-2.txt  assessment-3.txt  assessment-4.txt  prompt-1.txt  prompt-2.txt  prompt-3.txt  prompt-4.txt  session-cot-1.md  session-cot-2.md  session-cot-3.md  session-cot-4.md
tasks/task009/: assessment-1.txt  (+8 more)
(+3674 files in other folders)
